tests/neg-macros/annot-basic-accessIndirect/Test.scala
class Bar:
  @foo def bar(x: String): String = x // error
  bar("a")
